# brickboot

./: README.rst
software/: CMakeLists.txt
software/src/: config.h  isp_cstartup.c  main.c  sram_samba_sam3s2.lds  sram_samba_sam3s4.lds
tcl_lib/at91sam3s2-brick/: at91sam3s2-brick.tcl
tcl_lib/at91sam3s4-brick/: at91sam3s4-brick.tcl
